--- a/src/main/resources/static/css/slider.css
+++ b/src/main/resources/static/css/slider.css
@@ -17,7 +17,7 @@ section.range-slider input[type=range] {
     -webkit-box-shadow: inset 0 1px 0 0 #cdc6c6, inset 0 -1px 0 0 #d9d4d4;
     overflow: hidden;
     left: 0;
-    top: 30px;
+    top: 40px;
     width: 100%;
     outline: none;
     height: 20px;
@@ -99,7 +99,7 @@ section.range-slider input[type=range] {
     -webkit-box-shadow: inset 0 1px 0 0 #cdc6c6, inset 0 -1px 0 0 #d9d4d4;
     overflow: hidden;
     left: 0;
-    top: 30px;
+    top: 40px;
     outline: none;
     height: 20px;
     margin: 0;
@@ -162,4 +162,20 @@ section.range-slider input[type=range]:last-of-type::-moz-range-track {
 }
 section.range-slider input[type=range]::-moz-focus-outer {
     border: 0;
+}
+#sliders {
+    display: flex;
+    flex-direction: column;
+}
+.range-slider-inner {
+    display: flex;
+    align-items: center;
+    margin: 5px;
+}
+.range-slider-inner input {
+    padding: 3px;
+    margin-left: 3px;
+    flex: 1;
+    border: 1px solid #ddd;
+    border-radius: 4px;
 }
