--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -6,6 +6,11 @@ body {
     font-family: Arial, sans-serif;
     font-size: 14px;
 }
+*,
+*:before,
+*:after {
+    box-sizing: border-box;
+}
 li {
     list-style-type: none;
 }
@@ -23,7 +28,25 @@ ul ul {
     padding-left: 20px;
 }
 h3 {
-    margin: 10px 0;
+    margin: 5px 0;
+}
+/* ========== Кнопка выхода ========== */
+#logout {
+    width: 95%;
+}
+
+#logout button {
+    background: #ff0000;
+    color: white;
+    border: none;
+    padding: 6px 12px;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background 0.3s;
+}
+
+#logout button:hover {
+    background: #b30000;
 }
 
 /* ========== Основной контейнер ========== */
@@ -32,7 +55,7 @@ h3 {
     grid-template-columns: 1fr 3.5fr;
     gap: 20px;
     width: 95%;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 /* ========== Левая панель с фильтром по дате и категориям ========== */
@@ -40,7 +63,7 @@ h3 {
     display: flex;
     flex-direction: column;
     gap: 20px;
-    height: 870px;
+    height: 850px;
 }
 
 /* ========== Фильтр дат ========== */
@@ -167,7 +190,6 @@ h3 {
 
 /* ========== Таблица товаров ========== */
 #table-container {
-    height: 850px;
     grid-column: 1;
     background: #f8f9fa;
     padding: 10px;
