--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="ru">
 <head>
-    <title>Login</title>
+    <title>Авторизация</title>
+    <link rel="stylesheet" href="/css/login.css">
+
+    <link rel="icon" type="image/png" href="/img/favicon/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/img/favicon/favicon.svg" />
+    <link rel="shortcut icon" href="/img/favicon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="MyWebSite" />
+    <link rel="manifest" href="/img/favicon/site.webmanifest" />
 </head>
 <body>
-<h2>Login</h2>
-<form th:action="@{/login}" method="post">
-    <div>
-        <label>Username: <input type="text" name="username" /></label>
-    </div>
-    <div>
-        <label>Password: <input type="password" name="password" /></label>
-    </div>
-    <div>
-        <button type="submit">Login</button>
-    </div>
-</form>
+<div class="login-container">
+    <h2>Авторизация</h2>
+    <form th:action="@{/login}" method="post">
+        <input type="text" id="username" name="username" placeholder="Логин" required />
+        <input type="password" id="password" name="password" placeholder="Пароль" required />
+        <button type="submit">Войти</button>
+    </form>
+</div>
 </body>
 </html>
