--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -15,8 +15,8 @@
 <div class="login-container">
     <h2>Авторизация</h2>
     <form th:action="@{/login}" method="post">
-        <input type="text" id="username" name="username" placeholder="Логин" required />
-        <input type="password" id="password" name="password" placeholder="Пароль" required />
+        <input type="text" id="username" name="username" placeholder="Логин" required autocomplete="username"/>
+        <input type="password" id="password" name="password" placeholder="Пароль" required autocomplete="current-password">
         <button type="submit">Войти</button>
     </form>
 </div>
