Feature: Loading the list of categories when the page loads

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -157,9 +157,9 @@
 
 <!-- Подгрузка данных извлечённых из БД -->
 <script th:inline="javascript">
-    window.dateTimeRange = /*[[${dateTimeRange}]]*/ [];
+    window.dateTimeRange = /*[[${dateTimeRange}]]*/
+    window.categories = /*[[${categories}]]*/ [];
     window.data = {};
-    window.categories = {};
 </script>
 
 </body>
