--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -133,17 +133,17 @@ h3 {
 .subcategory-item ul .subcategory-item ul li label span {
     padding: 6px 10px;
     line-height: 1.6em;
-    transition: all 0.2s ease; /* Более быстрая анимация */
+    transition: all 0.2s ease;
     cursor: pointer;
-    border-radius: 6px; /* Скругленные углы */
+    border-radius: 6px;
 }
 
 .category-item strong:hover,
 .subcategory-item span:nth-child(2):hover,
 .subcategory-item ul .subcategory-item ul li label span:hover {
-    background-color: #007bff; /* Более яркий акцентный цвет */
+    background-color: #007bff;
     color: #fff;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Легкая тень при наведении */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .category-item:not(:first-child) {
